# soundRot

./: CMakeLists.txt  main.cpp
soloud/: CMakeLists.txt
